# zoneminder-slack-bot

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  index.html  params.json  requirements-dev.txt  requirements.txt  sample.cfg  setup.cfg  setup.py  zoneminder-slack-bot.py
docs/: BUILDING.md  zonebot-example-config.cfg
docs/images/: ZoneBot-Screen-Cast.webm
etc/: zonebot-example-config.cfg
test/: test_commands.py  test_splitall.py  test_validate_config.py  test_zonebot.py  test_zoneminder.py
utils/: get_bot_id.py
zonebot/: __init__.py  bot.py  commands.py  zonebot_alert.py  zonebot_get_id.py  zonebot_main.py
zonebot/zoneminder/: __init__.py  monitors.py  session.py  zoneminder.py
